trade fixes and changes

--- a/localisation/TD_trade_companies_l_english.yml
+++ b/localisation/TD_trade_companies_l_english.yml
@@ -17,9 +17,9 @@
  chilverchian_company: "Chilverchian Charter"
  TRADE_COMPANY_CHILVERCHIAN_Root_Culture_GetName: "[Root.Culture.GetName] Chiverchia Company"
  TRADE_COMPANY_CHILVERCHIAN_Trade_Company: "Chilverchian Trade Company"
- hazsiharn_company: "Nahrdanti Charter"
- TRADE_COMPANY_HAZSIHAR_Root_Culture_GetName: "[Root.Culture.GetName] Nahrdant Company"
- TRADE_COMPANY_HAZSIHAR_Trade_Company: "Nahrdanti Trade Company"
+ hazsiharn_company: "Nasihart Charter"
+ TRADE_COMPANY_HAZSIHAR_Root_Culture_GetName: "[Root.Culture.GetName] Nasihart Company"
+ TRADE_COMPANY_HAZSIHAR_Trade_Company: "Nasihart Trade Company"
  matliman_company: "Matlimani Charter"
  TRADE_COMPANY_MATLIMAN_Root_Culture_GetName: "[Root.Culture.GetName] Matliman Company"
  TRADE_COMPANY_MATLIMAN_Trade_Company: "Matlimani Trade Company"
@@ -155,87 +155,117 @@
  nitai_company: "Nitai Charter"
  TRADE_COMPANY_NITAI_Root_Culture_GetName: "[Root.Culture.GetName] Nitai Company"
  TRADE_COMPANY_NITAI_Trade_Company: "Nitai Trade Company"
- waiguren_company: "Waiguren Company"
+ waiguren_company: "Waiguren Charter"
  TRADE_COMPANY_WAIGUREN_Root_Culture_GetName: "[Root.Culture.GetName] Waiguren Company"
  TRADE_COMPANY_WAIGUREN_Trade_Company: "Waiguren Trade Company"
- dasenli_company: "Dasenlian Company"
+ dasenli_company: "Dasenlian Charter"
  TRADE_COMPANY_DASENLI_Root_Culture_GetName: "[Root.Culture.GetName] Dasenli Company"
  TRADE_COMPANY_DASENLI_Trade_Company: "Dasenlian Trade Company"
- hangchan_company: "Huangche Company"
+ hangchan_company: "Huangche Charter"
  TRADE_COMPANY_HANGCHAN_Root_Culture_GetName: "[Root.Culture.GetName] Hangchan Company"
  TRADE_COMPANY_HANGCHAN_Trade_Company: "Huangche Trade Company"
- hai_company: "Hai Company"
+ hai_company: "Hai Charter"
  TRADE_COMPANY_HAI_Root_Culture_GetName: "[Root.Culture.GetName] Hai Company"
  TRADE_COMPANY_HAI_Trade_Company: "Hai Trade Company"
- tsutan_company: "Tsutan Company"
+ tsutan_company: "Tsutan Charter"
  TRADE_COMPANY_TSUTAN_Root_Culture_GetName: "[Root.Culture.GetName] Tsutan Company"
  TRADE_COMPANY_TSUTAN_Trade_Company: "Tsutan Trade Company"
- okukaigan_company: "Okukaigan Company"
+ okukaigan_company: "Okukaigan Charter"
  TRADE_COMPANY_OKUKAIGAN_Root_Culture_GetName: "[Root.Culture.GetName] Okukaiga Company"
  TRADE_COMPANY_OKUKAIGAN_Trade_Company: "Okukaigan Trade Company"
- toshiman_company: "Toshiman Company"
+ toshiman_company: "Toshiman Charter"
  TRADE_COMPANY_TOSHIMAN_Root_Culture_GetName: "[Root.Culture.GetName] Toshima Company"
  TRADE_COMPANY_TOSHIMAN_Trade_Company: "Toshiman Trade Company"
- viravananti_company: "Viravananti Company"
+ viravananti_company: "Viravananti Charter"
  TRADE_COMPANY_VIRAVANANTI_Root_Culture_GetName: "[Root.Culture.GetName] Viravananti Company"
  TRADE_COMPANY_VIRAVANANTI_Trade_Company: "Viravananti Trade Company"
- apagtaru_company: "Apagtaru Company"
+ apagtaru_company: "Apagtaru Charter"
  TRADE_COMPANY_APAGTARU_Root_Culture_GetName: "[Root.Culture.GetName] Apagtaru Company"
  TRADE_COMPANY_APAGTARU_Trade_Company: "Apagtaru Trade Company"
  mazavasi_company: "Mazavasi Company"
  TRADE_COMPANY_MAZAVASI_Root_Culture_GetName: "[Root.Culture.GetName] Mazavasi Company"
  TRADE_COMPANY_MAZAVASI_Trade_Company: "Mazavasi Trade Company"
- valvuan_company: "Valvuan Company"
+ valvuan_company: "Valvuan Charter"
  TRADE_COMPANY_VALVUAN_Root_Culture_GetName: "[Root.Culture.GetName] Valvu Company"
  TRADE_COMPANY_VALVUAN_Trade_Company: "Valvuan Trade Company"
- kacskyin_company: "Kacskyin Company"
+ kacskyin_company: "Kacskyin Charter"
  TRADE_COMPANY_KACSKYIN_Root_Culture_GetName: "[Root.Culture.GetName] Kacskyin Company"
  TRADE_COMPANY_KACSKYIN_Trade_Company: "Kacskyin Trade Company"
- janman_company: "Janman Company"
+ janman_company: "Janman Charter"
  TRADE_COMPANY_JANMAN_Root_Culture_GetName: "[Root.Culture.GetName] Janma Company"
  TRADE_COMPANY_JANMAN_Trade_Company: "Janman Trade Company"
- upacayan_company: "Upacayan Company"
+ upacayan_company: "Upacayan Charter"
  TRADE_COMPANY_UPACAYAN_Root_Culture_GetName: "[Root.Culture.GetName] Upacaya Company"
  TRADE_COMPANY_UPACAYAN_Trade_Company: "Upacayan Trade Company"
- raykaani_company: "Raykaani Company"
+ raykaani_company: "Raykaani Charter"
  TRADE_COMPANY_RAYKAANI_Root_Culture_GetName: "[Root.Culture.GetName] Raykaamar Company"
  TRADE_COMPANY_RAYKAANI_Trade_Company: "Raykaani Trade Company"
- nragan_company: "Nragan Company"
+ nragan_company: "Nragan Charter"
  TRADE_COMPANY_NRAGAN_Root_Culture_GetName: "[Root.Culture.GetName] Liajnragana Company"
  TRADE_COMPANY_NRAGAN_Trade_Company: "Nragan Trade Company"
- sarvini_company: "Sarvini Company"
+ sarvini_company: "Sarvini Charter"
  TRADE_COMPANY_SARVINI_Root_Culture_GetName: "[Root.Culture.GetName] Rygkun Company"
  TRADE_COMPANY_SARVINI_Trade_Company: "Sarvini Trade Company"
- apastra_company: "Apastra Company"
+ apastra_company: "Apastra Charter"
  TRADE_COMPANY_APASTRA_Root_Culture_GetName: "[Root.Culture.GetName] Amajya Company"
  TRADE_COMPANY_APASTRA_Trade_Company: "Apastra Trade Company"
- kindulia_company: "Kindulian Company"
+ kindulia_company: "Kindulian Charter"
  TRADE_COMPANY_KINDULIA_Root_Culture_GetName: "[Root.Culture.GetName] Kindulia Company"
  TRADE_COMPANY_KINDULIA_Trade_Company: "Kindulia Trade Company"
- burikati_company: "Burikati Company"
+ burikati_company: "Burikati Charter"
  TRADE_COMPANY_BURIKATI_Root_Culture_GetName: "[Root.Culture.GetName] Fuhment Company"
  TRADE_COMPANY_BURIKATI_Trade_Company: "Fuhment Trade Company"
- pankati_company: "Pankati Company"
+ pankati_company: "Pankati Charter"
  TRADE_COMPANY_PANKATI_Root_Culture_GetName: "[Root.Culture.GetName] Laut Dalam Company"
  TRADE_COMPANY_PANKATI_Trade_Company: "Laut Dalam Trade Company"
- misivid_company: "Misivid Company"
+ misivid_company: "Misivid Charter"
  TRADE_COMPANY_MISIVID_Root_Culture_GetName: "[Root.Culture.GetName] Saen-Sakha Company"
  TRADE_COMPANY_MISIVID_Trade_Company: "Saen-Sakha Trade Company"
- nai_company: "Nài Company"
+ nai_company: "Nài Charter"
  TRADE_COMPANY_NAI_Root_Culture_GetName: "[Root.Culture.GetName] Nài Bay Company"
  TRADE_COMPANY_NAI_Trade_Company: "Nài Bay Trade Company"
- ta_trai_company: "Ta-Trâi Company"
+ ta_trai_company: "Ta-Trâi Charter"
  TRADE_COMPANY_TA_TRAI_Root_Culture_GetName: "[Root.Culture.GetName] Voitak Company"
  TRADE_COMPANY_TA_TRAI_Trade_Company: "Voitak Trade Company"
- thboira_company: "Thboira Company"
+ thboira_company: "Thboira Charter"
  TRADE_COMPANY_THBOIRA_Root_Culture_GetName: "[Root.Culture.GetName] Pipobsa Company"
  TRADE_COMPANY_THBOIRA_Trade_Company: "Pipobsa Trade Company"
- tukyeung_company: "Tukyeungian Company"
+ tukyeung_company: "Tukyeungian Charter"
  TRADE_COMPANY_TUKYEUNG_Root_Culture_GetName: "[Root.Culture.GetName] Tukyeung Copmpany"
  TRADE_COMPANY_TUKYEUNG_Trade_Company: "Tukyeung Trade Company"
- cak_kecig_company: "Cak'kecig Company"
+ cak_kecig_company: "Cak'kecig Charter"
  TRADE_COMPANY_CAK_KECIG_Root_Culture_GetName: "[Root.Culture.GetName] Bkuslcuht Company"
  TRADE_COMPANY_CAK_KECIG_Trade_Company: "Bkuslcuht Trade Company"
- kadapsuo_company: "Kadapsuo Company"
+ kadapsuo_company: "Kadapsuo Charter"
  TRADE_COMPANY_KADAPSUO_Root_Culture_GetName: "[Root.Culture.GetName] Aiunusu Company"
  TRADE_COMPANY_KADAPSUO_Trade_Company: "Aiunusu Trade Company"
+ ghodaran_company: "Ghodaran Charter"
+ TRADE_COMPANY_GHODARAN_Root_Culture_GetName: "[Root.Culture.GetName] Ghodara Company"
+ TRADE_COMPANY_GHODARAN_Trade_Company: "Ghodara Trade Company"
+ bohemian_company: "Bohemian Charter"
+ TRADE_COMPANY_BOHEMIAN_Root_Culture_GetName: "[Root.Culture.GetName] Bohemia Company"
+ TRADE_COMPANY_BOHEMIAN_Trade_Company: "Bohemia Trade Company"
+ snaiwatzer_company: "Snaiwatzer Charter"
+ TRADE_COMPANY_SNAIWATZER_Root_Culture_GetName: "[Root.Culture.GetName] Cacumuds Company"
+ TRADE_COMPANY_SNAIWATZER_Trade_Company: "Cacumuds Trade Company"
+ maqhazian_company: "Maqhazian Charter"
+ TRADE_COMPANY_MAQHAZIAN_Root_Culture_GetName: "[Root.Culture.GetName] Azguramajal Company"
+ TRADE_COMPANY_MAQHAZIAN_Trade_Company: "Azguramajal Trade Company"
+ jambakan_company: "Jambakan Charter"
+ TRADE_COMPANY_JAMBAKAN_Root_Culture_GetName: "[Root.Culture.GetName] Jambakan Company"
+ TRADE_COMPANY_JAMBAKAN_Trade_Company: "Jambaka Trade Company"
+ buluban_company: "Buluban Charter"
+ TRADE_COMPANY_BULUBAN_Root_Culture_GetName: "[Root.Culture.GetName] Mbalan Company"
+ TRADE_COMPANY_BULUBAN_Trade_Company: "Mbalan Trade Company"
+ braissli_company: "Braissli Charter"
+ TRADE_COMPANY_BRAISSLI_Root_Culture_GetName: "[Root.Culture.GetName] Tenera Company"
+ TRADE_COMPANY_BRAISSLI_Trade_Company: "Tenera Trade Company"
+ parroutan_company: "Parroutan Charter"
+ TRADE_COMPANY_PARROUTAN_Root_Culture_GetName: "[Root.Culture.GetName] Parrout Company"
+ TRADE_COMPANY_PARROUTAN_Trade_Company: "Parrout Trade Company"
+ kapeti_company: "Kapeti Charter"
+ TRADE_COMPANY_KAPETI_Root_Culture_GetName: "[Root.Culture.GetName] Kankar Company"
+ TRADE_COMPANY_KAPETI_Trade_Company: "Kankar Trade Company"
+ matteie_company: "Matteie Charter"
+ TRADE_COMPANY_MATTEIE_Root_Culture_GetName: "[Root.Culture.GetName] Okoeruara Company"
+ TRADE_COMPANY_MATTEIE_Trade_Company: "Okoeruara Trade Company"
