--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -113,3 +113,4 @@
  anzaqan_tradenode: "Maqhazian Coast"
  bohemia_tradenode: "Cemitonian Gulf"
  cacumuds_tradenode: "Adrianburg"
+ natraki_tradenode: "Natraki"
