--- a/localisation/TD_01_Flavour_Pamkusea_l_english.yml
+++ b/localisation/TD_01_Flavour_Pamkusea_l_english.yml
@@ -4,7 +4,7 @@
  negotiate_with_achnith_desc: "There are 2 reasons to maintain good relations with Achnith - economical and political benefits. If we collaborate we can monopolise panourgian trade and both nations will prosper. It also will legitimise Memlashali rule over our vast Ilikiomenoi population."
  negotatiate_with_achnith_tt: "We will attempt to sway leaders of Achnith to strike a mutually beneficial deal."
  pamkusea.1.t: "Deal with the Devil"
- pamkusea.1.desc: "todo"
+ pamkusea.1.desc: "Many expected a breeze of fresh air with the ascension of [Mem.Monarch.GetName], however nobody expected the diplomacy to change so drastically. After some time of warming relations and striking mutually benefitial deals, the Memlashali envoys have reached us with a proposal of a union, maybe finally ending the hostilities between our peoples, finally making Pamkusea an important player in regional politics. Many of our oligarchs were convinced, however the parliament still has the final say."
  pamkusea.1.a: "This deal could benefit us all..."
  pamkusea.1.b: "No. We will not negotiate with these heathens."
  pamkusea.1_tt: "Striking this deal might lead to losing of our independence..."
