--- a/localisation/TD_01_flavour_ansgarland_l_english.yml
+++ b/localisation/TD_01_flavour_ansgarland_l_english.yml
@@ -17,7 +17,7 @@
  ansgarland_koniginsmarine: "Königinsmarine"
  ansgarland_koniginsmarine_desc: "For the most of Geoberic princes and even the kingdom due to our location at the edge of the ocean, a navy was only a way to effectively transfer soldiers, a simple tool to use when a need arises. With the age of oversea colonization, demand for a large fleet grew thanks to the expansion of transcontinental trade routes and a need to keep them at bay. In many cases it could also be used to project our own power on weaker nations, exterting influence to reach a satisfying for us outcome.\n\nThe first person to take special interest in the expansion of said fleet was queen Mathilda, which was also the founder of the naval academy of Hescerport. To honor her efforts, instead of dedicating the navy to the king like with the land army, it was named after the queens of Ansgarland, with the navy bearing the name Königinsmarine."
 
- ansgarland.1.t: "Ties of [Root.Monarch.Dynasty.GetName] dynasty"
+ ansgarland.1.t: "Ties of house [Root.Monarch.Dynasty.GetName]"
  ansgarland.1.desc: "The Geoberic dynasties are knit tighter than any other families. Thanks to keeping blood within the elite, there is always a high chance to find an alternative heir to the throne in case of the inability of our ruler to produce an offspring. Exactly in this situation the [Root.GovernmentName] of [Root.GetName] has found itself in, with some suggesting that the heir to the [geoberic_heir_source_et.GovernmentName] of [geoberic_heir_source_et.GetName] would be the ruler of both crowns."
  ansgarland.1.a: "We will trust [geoberic_heir_source_et.GetName]"
  ansgarland.1.a_tt: "We will fall under a Personal Union with the specified Country."
