--- a/localisation/TD_trade_companies_l_english.yml
+++ b/localisation/TD_trade_companies_l_english.yml
@@ -71,9 +71,9 @@
  syvametsan_company: "Syvämetsän Charter"
  TRADE_COMPANY_SYVAMETSAN_Root_Culture_GetName: "[Root.Culture.GetName] Syvämetsä Company"
  TRADE_COMPANY_SYVAMETSAN_Trade_Company: "Syvämetsän Trade Company"
- rubmen_company: "Rubmen Charter"
- TRADE_COMPANY_RUBMEN_Root_Culture_GetName: "[Root.Culture.GetName] Rubmeo Company"
- TRADE_COMPANY_RUBMEN_Trade_Company: "Rubmen Trade Company"
+ rubmen_company: "Finosian Charter"
+ TRADE_COMPANY_RUBMEN_Root_Culture_GetName: "[Root.Culture.GetName] Finosia Company"
+ TRADE_COMPANY_RUBMEN_Trade_Company: "Finosia Trade Company"
  uzkolian_company: "Uzkolian Charter"
  TRADE_COMPANY_UZKOLIAN_Root_Culture_GetName: "[Root.Culture.GetName] Uzkolia Company"
  TRADE_COMPANY_UZKOLIAN_Trade_Company: "Uzkolian Trade Company"
