--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -244,7 +244,7 @@
 
  wasichantlian: "Chantlian"
 
- chantlian_pantheon: "Chantlian Pantheon"
+ chantlian_pantheon: "Chantlian Faiths"
  chantlian_pantheon_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  chantlian_pantheon_rebels_title: "Religious"
  chantlian_pantheon_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
