--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -470,6 +470,7 @@
  debek: "Debek"
  bachebil: "Bachebil"
  dac_kwan: "Dac Kwan"
+ da_waq:0 "Da Waq"
 
  atadniu_group: "Atadniu"
  savkoan: "Savkoan"
