--- a/localisation/TD_naval_doctrines_l_english.yml
+++ b/localisation/TD_naval_doctrines_l_english.yml
@@ -5,3 +5,7 @@
  doctrine_pyrinasa_desc: "Pýrinása, or firebreathers, are special units available to Achnith and Apaxtaros. Innovative technology of these ships is owed to ancient people of Pamkusea, but the technology was recently rediscovered to combat visparayan invaders."
  doctrine_maqrinian: "Maqrinian Doctrine"
  doctrine_maqrinian_desc: "The focus on heavy bombardment of the enemy from a safe distance will not only ensure naval victories, but will allow for quicker sieges of coastal strongholds."
+ doctrine_kabonen_coastal_protection: "Coastal Protection"
+ doctrine_kabonen_coastal_protection_desc: "The Bkuslcuhtian Piracy was so prevalent, that Kabonen, to secure it's internal and external interests, developed a coastal protection doctrine, that other Bkuslcuhtian countries later adapted themselves."
+ doctrine_kabonen_coastal_protection_upgraded: "Coastal Protection"
+ doctrine_kabonen_coastal_protection_upgraded_desc: "The Bkuslcuhtian Piracy was so prevalent, that Kabonen, to secure it's internal and external interests, developed a coastal protection doctrine, and expanded on it, to secure it's vital interests by securing key trade points."
