--- a/localisation/TD_01_flavour_bkuslcuht_region_l_english.yml
+++ b/localisation/TD_01_flavour_bkuslcuht_region_l_english.yml
@@ -1,26 +1,4 @@
-﻿l_english:
- bkuslcuht_fur_modifier: "Erambrei Jungle Fur Abundance"
- kabonen_ideas: "Kabonenian Ideas"
- kabonen_ideas_start: "Kabonenian Traditions"
- kabonen_ideas_bonus: "Kabonenian Ambition"
- kabonen_legacy_of_the_muzbahi: "Legacy of the Muzbahi Explorers"
- kabonen_legacy_of_the_muzbahi_desc: "We are descendants of the western people, that valued hard work over anything, so we will work as hard to keep living here."
- kabonen_lessons_of_the_pirate_conflicts: "Lessons of the Pirate Hunting"
- kabonen_lessons_of_the_pirate_conflicts_desc: "Tajmuqi pirates being a menace for our trade lines, so we have to adapt our naval doctrines accordingly. The pirates don't stand a chance against a Galley Warfare on shallow waters!"
- kabonen_adapting_local_administration: "Adapting Locals into Administration"
- kabonen_adapting_local_administration_desc: "Frankrani are the minority in our new homeland, and we can't sustain our administration without applying a coexistence policies. Locals now will be allowed into lower layers of our Administration."
- kabonen_bkuslcuht_trade_dominance: "Bkuslcuht Trade Dominance"
- kabonen_bkuslcuht_trade_dominance_desc: "With our superior naval doctrine, we are the only Bkuslcuht nation that managed to fend off successfully the Matriarchal Pirates, which raised our merchants prestige accordingly, making trade domination of the whole region a possibility."
- kabonen_adapting_legal_codex: "Kabonenian Legal Codex"
- kabonen_adapting_legal_codex_desc: "With continued adaptation of coexistence policies, our homeland had to adapt a Kabonenian Legal Codex, that in theory made every of it's citizen equal in court of law."
- kabonen_beacon_of_western_ideas: "Beacon of Western Ideas"
- kabonen_beacon_of_western_ideas_desc: "After decline of our country after Tarag'nomabgi war, we had to reestablish ties with our western brethren, and after that we learned a lot from them, especially the printing press and the existence of a whole new world."
- kabonen_modernized_ship_design: "Modernized Ship Designs"
- kabonen_modernized_ship_design_desc: "Navy is lifeline of our land, without it, we will cease to exist, crushed by the outside powers. We need to do everything to make sure our ships are best of the best, and to achieve that we will invite forgein ship designers from Mysentria."
- 
- lost_republic_reform: "Lost Republic"
- lost_republic_reform_desc: "The Republic founded by Yermic Mawaqi merchants that lost their way when sailing east to find a new trade route to Hengtua. Seen as a blight of the earth by all of its neighbours."
- 
+﻿l_english: 
  cak_kecig_group_ideas: "Cak Kecig Minor Ideas"
  cak_kecig_group_ideas_start: "Cak Kecig Minor Traditions"
  cak_kecig_group_ideas_bonus: "Cak Kecig Minor Ambition"
@@ -60,3 +38,4 @@
  bkuslcuht.1.t: "End of Erambrei Fur Abundance"
  bkuslcuht.1.desc: "The Erambrei Jugnle was abundant in the fur due to high numbers of furred animals, but due to extensive hunting over past century, the numbers of potential animals have diminished, bringing some species into near extinction, and making those provinces abundant no more."
  bkuslcuht.1.a: "We should have respected the mother nature"
+ edict_iav_karbium: "Iav Karbium"
