Kabonen MT Minors Tweaks and Descriptions

--- a/localisation/TD_01_flavour_kabonen_l_english.yml
+++ b/localisation/TD_01_flavour_kabonen_l_english.yml
@@ -32,12 +32,12 @@
  kabonen.4.a: "Let the Bloodbath begin!"
  
  KBN_End_Local_Piracy_title: "End the Local Piracy"
- KBN_End_Local_Piracy_desc: ""
+ KBN_End_Local_Piracy_desc: "The Ramtneni Pirates are a menace not only to our trade interests, but to the whole Bkuslcuht region as a whole! We should put increased efforts into ending local piracy before it becomes a bigger problem."
  Kabonen_Has_Admirals_tt: "If we have atleast §Y1 admiral§!"
  KBN_Ended_Piracy: "Ended Bkuslcuht Piracy"
 
  KBN_Lost_No_More_title: "Lost No More"
- KBN_Lost_No_More_desc: ""
+ KBN_Lost_No_More_desc: "We are called Lost Republic beacuse local neighbours hate us, but it's time we institute the reforms that hopefully change this matter. We are Lost no more!"
  kabonen.1_tt: "We will reform our Lost Republic so it doesn't get relation penalties, or unlock new Tier 1 Government reform"
  kabonen.1.a_tt: "We will Unlock Matriarchal Republicanism Tier 1 Government Reform"
  kabonen.1.b_tt: "We will stop getting penalties from Lost Republic Tier 1 Government Reform"
@@ -51,24 +51,24 @@
  kabonen.2.b: "They can't stop the progress!"
 
  KBN_Fate_Of_Kabonen_title: "The Fate of Kabonen"
- KBN_Fate_Of_Kabonen_desc: ""
+ KBN_Fate_Of_Kabonen_desc: "With the reforms within the republic behind us, it's time we finally decide the nature of our country, the very Fate of Kabonen, once and for all."
  KBN_Has_Cultures_tt: "If we have atleast §Y3 cultures§! accepted"
  KBN_Has_Development_tt: "If we have atleast §Y100 development§! in Mawaqi provinces"
- KBN_Unlock_Alliance_of_states_tt: "Unlocks §GAlliance of States§! Tier 7 Government Reform"
- KBN_Unlock_integration_into_cakkecig_decision_tt: "Unlocks §GAssimilate into Cak'kecig Culture§! decision"
+ KBN_Unlock_Alliance_of_states_tt: "Unlocks §YAlliance of States§! Tier 7 Government Reform"
+ KBN_Unlock_integration_into_cakkecig_decision_tt: "Unlocks §YAssimilate into Cak'kecig Culture§! decision"
  KBN_Move_Culture_Into_Cakkecig_group_title: "Assimilate into Cak'kecig Culture"
- KBN_Unlock_Iav_Karbium_State_Edit_tt: "We will Unlock §GIav Karbium§! State Edict\n"
+ KBN_Unlock_Iav_Karbium_State_Edit_tt: "We will Unlock §YIav Karbium§! State Edict, which grants §G+15%§! Local Production Efficiency\n"
  KBN_Alliance_of_states_reform: "Alliance of States"
  KBN_Alliance_of_states_reform_desc: " "
  da_waq_culture_tt: "All §YMawaqi§! provinces we own will adopt §YDa Waq§! Culture"
  KBN_Mawaqi_Supremacy: "Mawaqi Supremacy"
 
  KBN_Expand_Tricity_title: "Expand the Tricity"
- KBN_Expand_Tricity_desc: ""
+ KBN_Expand_Tricity_desc: "Daraka and Qadahir were always sister cities, but underdeveloped Kasak between them made any sorts of communication and transport difficult. It's time we integrate all three cities into a Tricity spanning all of our coast!"
  KBN_The_Tricity: "The Tricity"
 
  KBN_End_Moon_Kingdom_title: "End the Moon Kingdom"
- KBN_End_Moon_Kingdom_desc: ""
+ KBN_End_Moon_Kingdom_desc: "We have long history of conflicts with the Bnai Byniev, or how it is commonly called, the Moon Kingdom, and it's time we settle it once and for all."
  KBN_Bhariew_Agricultural_Expertise: "Bhariew Agricultural Expertise"
  KBN_Race_For_Pipobsa: "Race for Pipobsa"
  kabonen.3.t: "The Fall of the Moon Kingdom"
@@ -78,9 +78,9 @@
  kabonen.3_tt: "We will get an option to assimilate with Bhariew Culture, or prepare for conquest of Pipobsa region\n"
 
  KBN_Midway_to_Hengtua_title: "Midway to Hengtua"
- KBN_Midway_to_Hengtua_desc: ""
- KBN_Upgraded_Naval_Doctrine_tt: "§YOur Unique naval doctrine will be upgraded§!"
+ KBN_Midway_to_Hengtua_desc: "With all of Bkuslcuht under our boot, it is time we secure all the trade routes between east and west, and secure total domination of the flow of goods between Hengtua and Mysentria."
+ KBN_Upgraded_Naval_Doctrine_tt: "§YOur Unique naval doctrine will be upgraded with:§!\nAllow Claims Bordering Claims"
  KBN_Dominated_Trade: "Dominated Trade Routes to Hengtua"
- KBN_Hengtuan_Monopoly: "Kabonen Dominated Trade routes to Hengtua"
+ KBN_Hengtuan_Monopoly: "Kabonen Dominated Trade Routes to Hengtua"
  Kabonen_Has_Spices_tt: "If we produce atleast §Y15§! units of Spices"
  Kabonen_Has_Ivory_tt: "If we produce atleast §Y15§! units of Ivory"
