--- a/localisation/TD_01_flavour_kabonen_l_english.yml
+++ b/localisation/TD_01_flavour_kabonen_l_english.yml
@@ -35,10 +35,11 @@
  KBN_End_Local_Piracy_desc: "The Ramtneni Pirates are a menace not only to our trade interests, but to the whole Bkuslcuht region as a whole! We should put increased efforts into ending local piracy before it becomes a bigger problem."
  Kabonen_Has_Admirals_tt: "If we have atleast §Y1 admiral§!"
  KBN_Ended_Piracy: "Ended Bkuslcuht Piracy"
+ desc_KBN_Ended_Piracy: "After years we have successfully defeated the pitriy pirates harming our interests."
 
  KBN_Lost_No_More_title: "Lost No More"
  KBN_Lost_No_More_desc: "We are called Lost Republic beacuse local neighbours hate us, but it's time we institute the reforms that hopefully change this matter. We are Lost no more!"
- kabonen.1_tt: "We will reform our Lost Republic so it doesn't get relation penalties, or unlock new Tier 1 Government reform"
+ kabonen.1_tt: "Remove opinion of heathen religions from our government reform or gain a new Tier 1 Government Reform."
  kabonen.1.a_tt: "We will Unlock Matriarchal Republicanism Tier 1 Government Reform"
  kabonen.1.b_tt: "We will stop getting penalties from Lost Republic Tier 1 Government Reform"
  kabonen.1.t: "Reforms Within the Republic"
@@ -66,21 +67,25 @@
  KBN_Expand_Tricity_title: "Expand the Tricity"
  KBN_Expand_Tricity_desc: "Daraka and Qadahir were always sister cities, but underdeveloped Kasak between them made any sorts of communication and transport difficult. It's time we integrate all three cities into a Tricity spanning all of our coast!"
  KBN_The_Tricity: "The Tricity"
+ desc_KBN_The_Tricity: "Infrastructure connecting the core cities of Kabonen allows them to grow at an exponential rate."
 
  KBN_End_Moon_Kingdom_title: "End the Moon Kingdom"
  KBN_End_Moon_Kingdom_desc: "We have long history of conflicts with the Bnai Byniev, or how it is commonly called, the Moon Kingdom, and it's time we settle it once and for all."
  KBN_Bhariew_Agricultural_Expertise: "Bhariew Agricultural Expertise"
+ desc_KBN_Bhariew_Agricultural_Expertise: "People of Bnai Byniev have a large knowledge on these lands and how to keep them fertile for a long time."
  KBN_Race_For_Pipobsa: "Race for Pipobsa"
+ desc_KBN_Race_For_Pipobsa: "To penetrate the Thboiran cities, we need all the firepower we can get."
  kabonen.3.t: "The Fall of the Moon Kingdom"
  kabonen.3.desc: " "
  kabonen.3.a: "Let's Assimilate the Bhariew people"
  kabonen.3.b: "Our Destiny lies in the east!"
- kabonen.3_tt: "We will get an option to assimilate with Bhariew Culture, or prepare for conquest of Pipobsa region\n"
+ kabonen.3_tt: "We will either assimilate with the Bhariew Culture or focus on expanding our presence in the east\n"
 
  KBN_Midway_to_Hengtua_title: "Midway to Hengtua"
  KBN_Midway_to_Hengtua_desc: "With all of Bkuslcuht under our boot, it is time we secure all the trade routes between east and west, and secure total domination of the flow of goods between Hengtua and Mysentria."
  KBN_Upgraded_Naval_Doctrine_tt: "§YOur Unique naval doctrine will be upgraded with:§!\nAllow Claims Bordering Claims"
  KBN_Dominated_Trade: "Dominated Trade Routes to Hengtua"
+ desc_KBN_Dominated_Trade: "As the sole middlemen between the west and the east, we can manipulate the trade however we want."
  KBN_Hengtuan_Monopoly: "Kabonen Dominated Trade Routes to Hengtua"
  Kabonen_Has_Spices_tt: "If we produce atleast §Y15§! units of Spices"
  Kabonen_Has_Ivory_tt: "If we produce atleast §Y15§! units of Ivory"
