--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -1,7 +1,6 @@
 ﻿l_english:
  amsulan_sea_area: "Amsulan Gulf"
- northern_furmaria_area: "Northern Furmaria"
- southern_furmaria_area: "Southern Furmaria"
+ furmaria_area: "Furmaric Sea"
  camarian_coast_area: "Camarian Coast"
  sea_of_hamidar_area: "Sea of Hamidar"
  southern_alkalen_area: "South Alkalen Sea"
