super secret SIS collapse event

--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -808,3 +808,10 @@
  reformed_diet_reform: "Reformed Diet"
  reformed_diet_reform_desc: "In order to give more power to the emperor, the inner workings of imperial diet have been standardized and formalized."
  mechanic_gain_ia_from_parliament_yes: "Winning Issues in the Parliament grants §G5§! Imperial Authority."
+
+ saelian.14.t: "The Final Nail"
+ saelian.14.desc: "After its slow, but painful, collapse, the western Saelian Empire has completely ceased to exist, leaving only scattered landscape of counts, dukes, princes and kings. Many are wondering, who will take the mantle of the regional hegemon, now that the ancient empire has been lost to the sands of time."
+ saelian.14.a: "The west has fallen."
+ SIS_scramble_for_silvestria: "Scramble for Silvestria"
+ desc_SIS_scramble_for_silvestria: "Vacuum of power caused many states to try to gather as much power as they can."
+ saelian.14.b: "We should seize some land in the chaos."
